--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -774,7 +774,7 @@ Open your text editor and create the molecular substitution model file called {\
 Enter the \Rev code provided in this section in the new model file.
 \end{framed}}
 
-For our nucleotide sequence evolution model, we need to define a general time-reversible (GTR) substitution matrix.
+For our nucleotide sequence evolution model, we need to define a general time-reversible (GTR) instantaneous-rate matrix (\IE $Q$-matrix).
 A nucleotide GTR matrix is defined by a set of 4 stationary frequencies, and 6 exchangeability rates.
 We create stochastic nodes for these variables, each drawn from a uniform Dirichlet prior distribution.
 
@@ -798,7 +798,7 @@ moves[mvi++] = mvSimplexElementScale(sf, alpha=10.0, weight=5.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-Then we can define a deterministic node for our GTR substitution matrix using the special GTR matrix function.
+Then we can define a deterministic node for our GTR $Q$-matrix using the special GTR matrix function (\cl{fnGTR}).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 Q_cytb := fnGTR(er,sf)
@@ -809,7 +809,6 @@ Next, in order to model gamma-distributed rates across, we create an exponential
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 alpha_cytb ~ dnExponential( 1.0 )
-
 moves[mvi++] = mvScale(alpha_cytb, lambda=0.01, weight=1.0)
 moves[mvi++] = mvScale(alpha_cytb, lambda=0.1,  weight=1.0)
 moves[mvi++] = mvScale(alpha_cytb, lambda=1,    weight=1.0)
@@ -937,8 +936,8 @@ Enter the \Rev code provided in this section in this file.
 \medskip
 \subsubsection{Source Model Scripts}\label{subsub:Exercise-SourceMods}
 
-This step will load in the model scripts we have written in the text editor.
-
+\RevBayes uses the \cl{source()} function to load commands from \Rev files into the workspace.
+Use this function to load in the model scripts we have written in the text editor and saved in the \cl{scripts} directory.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 source("scripts/model_FBDP_TEFBD.Rev")
@@ -952,27 +951,57 @@ source("scripts/model_Morph_TEFBD.Rev")
 \end{snugshade*}}
 
 
-
 \medskip
 \subsubsection{Create Model Object}\label{subsub:Exercise-ModObj}
 
-
+We can now create our workspace model variable with our fully specified model DAG. 
+We will do this with the \cl{model()} function and provide a single node in the graph (\cl{sf}).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 mymodel = model(sf)
 \end{lstlisting}
 \end{snugshade*}}
-%\pagebreak
+
+The object \cl{mymodel} is a wrapper around the entire model graph and allows us to pass the model to various functions that are specific to our MCMC analysis.
 
 \medskip
 \subsubsection{Specify Monitors and Output Filenames}\label{subsub:Exercise-Monitors}
 
+The next important step for our master \Rev file is to specify the monitors and output file names.
+For this, we create a vector called \cl{monitors} that will each sample and record or output our MCMC. 
 
+First, we will specify a workspace variable to iterate over the \cl{monitors} vector.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 mni = 1
+\end{lstlisting}
+\end{snugshade*}}
+
+The first monitor we will create will monitor every named random variable in our model graph. 
+This will include every stochastic and deterministic node using the \cl{mnModel} monitor.
+The only parameter that is not included in the \cl{mnModel} is the tree topology. 
+Therefore, the parameters in the file written by this monitor are all numerical parameters written to a tab-separated text file that can be opened by accessory programs for evaluating such parameters.
+We will also name the output file for this monitor and indicate that we wish to sample our MCMC every 10 cycles.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
 monitors[mni++] = mnModel(filename="output/bears.log", printgen=10)
+\end{lstlisting}
+\end{snugshade*}}
+
+The \cl{mnFile} monitor writes any parameter we specify to file.
+Thus, if we only cared about the speciation rate and nothing else (this is not a typical or recommended attitude for an analysis this complex) we wouldn't use the \cl{mnModel} monitor above and just use the \cl{mnFile} monitor to write a smaller and simpler output file.
+Since the tree topology is not included in the \cl{mnModel} monitor (because it is not numerical), we will use \cl{mnFile} to write the tree to file by specifying our \cl{fbd\_tree} variable in the arguments.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
 monitors[mni++] = mnFile(filename="output/bears.trees", printgen=10, fbd_tree)
+\end{lstlisting}
+\end{snugshade*}}
+
+The last monitor we will add to our analysis will print information to the screen.
+Like with \cl{mnFile} we must tell \cl{mnScreen} which parameters we'd like to see updated on the screen. 
+We will choose the age of the MCRCA of living bears (\cl{age\_extant}), the number of sampled ancestors (\cl{num\_samp\_anc}), and the origin time (\cl{origin\_time}).
+{\tt \begin{snugshade*}
+\begin{lstlisting}
 monitors[mni++] = mnScreen(printgen=10, age_extant, num_samp_anc, origin_time)
 \end{lstlisting}
 \end{snugshade*}}
@@ -980,19 +1009,32 @@ monitors[mni++] = mnScreen(printgen=10, age_extant, num_samp_anc, origin_time)
 \medskip
 \subsubsection{Set up the MCMC}
 
-
+Once we have set up our model, moves, and monitors, we can now create the workspace variable that defines our MCMC run. 
+We do this using the \cl{mcmc()} function that simply takes the three main analysis components as arguments.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 mymcmc = mcmc(mymodel, monitors, moves)
+\end{lstlisting}
+\end{snugshade*}}
 
+The MCMC object that we named \cl{mymcmc} has a member method called \cl{.run()}. 
+This will execute our analysis and we will set the chain length to \cl{10000} cycles using the \cl{generations} option.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
 mymcmc.run(generations=10000)
+\end{lstlisting}
+\end{snugshade*}}
 
+Once our Markov chain has terminated, we will want \RevBayes to close. 
+Tell the program to quit using the \cl{q()} function.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
 q()
 \end{lstlisting}
 \end{snugshade*}}
 
 {\begin{framed}
-Save and close all files.
+You made it! Save and close all files.
 \end{framed}}
 
 \bigskip
@@ -1008,7 +1050,7 @@ Begin by running the \RevBayes executable.
 \end{lstlisting}
 \end{snugshade*}}
 
-Provided that you started \RevBayes from the correct directory (in \cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}), you can then use the \cl{source()} function to feed \RevBayes your master script file (\cl{mcmc\_TEFBD.Rev}).
+Provided that you started \RevBayes from the correct directory (\cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}), you can then use the \cl{source()} function to feed \RevBayes your master script file (\cl{mcmc\_TEFBD.Rev}).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 source("scripts/mcmc_TEFBD.Rev")
@@ -1046,6 +1088,8 @@ This will execute the analysis and you should see the following output (though n
 |*...
 \end{lstlisting}
 \end{snugshade*}}}
+
+When the analysis is complete, \RevBayes will quit and you will have a new directory called \cl{output} that will contain all of the files you specified with the monitors (Sect.\ \ref{subsub:Exercise-Monitors}).
 
 \bigskip
 \subsection{Summarize Your Results}\label{subsect:Exercise-SummarizeResults}
