first pass for sections 1,2 in bg tutorial

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
@@ -23,6 +23,7 @@
 \input{RB_Biogeography_Tutorial_2_content}
 \input{RB_Biogeography_Tutorial_3_content}
 \input{RB_Biogeography_Tutorial_4_content}
+%\input{RB_Biogeography_Tutorial_4_content}
 
 \bibliography{\GlobalResourcePath refs}
 
