--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -338,7 +338,7 @@ mymcmc.run(n_gen)
 
 \subsection*{Results}
 
-{\it Example results have around found in {\tt output\_example/epoch.*} }
+{\it Example results are provided as {\tt output\_example/epoch.*}.}
 
 When compared to the ancestral state estimates from the ``simple'' analysis (Figure \ref{fig:simple_RevGadgets_ase}), these results are more consonant with what we know about the origination times of the islands and lineages (Figure XX).
 First, this reconstruction asserts that the clade originated in the modern Hawaiian islands at a time when only Kauai was above sea level.
@@ -351,7 +351,7 @@ The next tutorials discuss how to jointly estimate phylogeny and biogeography, w
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=0.7\textwidth]{figures/fig_epoch_RevGadgets_ase.pdf}
+\includegraphics[width=0.6\textwidth]{figures/fig_epoch_RevGadgets_ase.pdf}
 \caption{Tree with ancestral state estimates. Nodes are annotated with ancestral states before and after cladogenetic events. Most probable states are shown. Colors of markers indicate the range state. Sizes of markers indicate the posterior probability of that state. }
 \label{fig:epoch_RevGadgets_ase}
 \end{figure}
