--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_4_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_4_content.tex
@@ -554,7 +554,7 @@ mymcmc.run(n_gen)
 
 \subsection*{Results}
 
-{\it Example results are found in {\tt output\_example/epoch\_phy.*} and {\tt output\_example/simple\_phy.*} }
+{\it Example results are provided as {\tt output\_example/epoch\_phy.*} and {\tt output\_example/simple\_phy.*} }
 
 To understand the influence of the epoch model on ancestral range and divergence time estimation, it is important to run addition analyses with alternative settings.
 Scripts to jointly estimate molecular evolution, historical biogeographic, and phylogenetic parameters are available as {\tt scripts/run\_simple\_phy.Rev} and {\tt scripts/run\_epoch\_phy.Rev}.
@@ -569,26 +569,25 @@ The ``simple'' analysis is similar to the ``epoch'' analysis, except it substitu
 \end{figure}
 
 We see that simple analysis (Fig \ref{fig:epoch_phy}, Left) estimates the ancestral range at the root of the clade as Maui + Mainland (MZ).
-This is unrealistic, both because of the extreme distance between those areas, but also the simple analysis estimates the root age to be $10.3 (HPD 4.6, 15.0) Ma$, well before Maui originated.
+This is unrealistic, both because of the extreme distance between those areas, but also the simple analysis estimates the root age to be 10.3 (HPD95\% 4.6, 15.0) Ma, well before Maui originated.
 
 The epoch analysis (Fig \ref{fig:epoch_phy}, Right) produces more sensible ancestral range estimates, with Kauai being colonized first, and younger islands only being colonized as they become available.
 When comparing the results to the earlier fixed-phylogeny epoch results \ref{fig:epoch_RevGadgets_ase}, we recover a greater role for cladogenesis for the younger speciation events.
 These two analyses only differ in terms of whether the phylogeny is fixed or estimated, so it is likely a result of phylogenetic error in the fixed tree.
 
-\begin{figure}[!ht]
+\begin{figure}[!h]
 \centering
 \includegraphics[width=0.49\textwidth]{figures/fig_simple_ages.pdf} \includegraphics[width=0.49\textwidth]{figures/fig_epoch_ages.pdf} 
 
-\caption{Plot of trace for island ages and the origin time of living silverswords. The left panel ignores paleogeography while the right panel conditions on it.}
+\caption{Plot of trace for island ages and the origin time of living silverswords. The left panel ignores paleogeography, allowing silverswords to originate well before the formation of Kauai ({\tt epoch\_times[1]}). The right panel conditions of paleogeography, which prefers a silversword crown age that follows the formation of Kauai.}
 \label{fig:epoch_ages}
 \end{figure}
 
 In Tracer, one can look at the sampled posterior of island ages in comparison the origination time of crown silverswords (Fig \label{fig:epoch_ages}).
 The left panel shows the simple analysis, where crown silverswords often originate before the formation of Kauai.
 The right panel shows that crown silverswords probably originated before the formation of Maui, but after the formation of Kauai.
-By tabulating the results of the deterministic variable {\tt ingroup\_older\_island}, we measure the posterior probability that crown silverswords originated before or after each particular epoch in the model.
 
-\begin{table}[!ht]
+\begin{table}[!h]
 \centering
 \begin{tabular}{c|cccc}
 Model       & $P(a_s>a_K)$ & $P(a_s>a_O)$ & $P(a_s>a_M)$ & $P(a_s>a_H)$ \\ \hline
@@ -596,7 +595,10 @@ simple & 0.72 & 0.94 & 0.99 & 1.00 \\
 epoch & 0.02 & 0.26 & 0.84 & 0.99 \\
 \end{tabular}
 \caption{Posterior probability that the age of crown silverswords ($a_s$) is older than the origination times of K, O, M, and H ($a_K, a_O, a_M, a_H$, respectively). The ``simple'' model (Left) ignores paleogeography while the ``epoch'' model (Right) conditions on it.}
+\label{tab:epoch_ages}
 \end{table}
+
+By tabulating the results of the deterministic variable {\tt ingroup\_older\_island}, we measure the posterior probability that crown silverswords originated before or after each particular epoch in the model (Table \ref{tab:epoch_ages}).
 
 
 \newpage
